--- a/index 2.html
+++ b/index 2.html
@@ -1,54 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="style.css" />
 <style>
-
-
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333333;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #111111;
-}
+<title>To do list </title> 
 </style>
+
 </head>
+
 <body>
-
-<h2 style="text-align:center">To do list </h2>
-<p></p>
-<img src="https://media.giphy.com/media/3oKGzvg3gGxSS3O38A/giphy.gif" alt= "Calpin+Stylos"   style= "width:250px; height:250px" >
-<img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjfpcWDqZflAhUIkhQKHdiUC2kQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.gambarufitness.com%2Fhome%2Frgb-gradient-bar-for-logo-carrasel%2F&psig=AOvVaw3LwDxUrxK2Ic82ri3xcbGk&ust=1570990273465553" alt= "Calpin+Stylos"   style= "width:250px; height:250px" >
-<img src="https://media.giphy.com/media/3oKGzvg3gGxSS3O38A/giphy.gif" alt= "Calpin+Stylos"   style= "width:250px; height:250px""float:right";>
-
-<ul>
-  <li><a href="#First">fist</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
-</ul>
-
 
 <body style="background-color:#ADADAD;">
 
+<!--construction de l'encadré du titre -->
 
+<!--Avec width= remplissage en largeur du tableau, border= epaisseur de la premiere bande, cellspacing= largeur entre les 2 bandes et cellpading= la largeur du tout -->
+<table width="100%" border ="10" cellspacing="10" cellpadding="10"><tr><td><div align=center><br>
+<h1 style="text-align:center;" >To do list </h1> </div></td><tr></table>
+  </table>
+
+<!--placement du texte tache à gauche-->
+ <p align=left>Tache</p>
+
+<!--zone de texte à ecrire-->
+<input  type="text" id="txt1" placeholder="Tâche à effectuer" autofocus style="width:500px height=352px " ><br>
+ 
+<!--bouton ajouter-->
+     <input  class="favorite styled"
+       type="button"
+       value="Ajouter"
+       style="width:100px " />
+
+
+  
 
 </body>
 </html>
