--- a/index 2.html
+++ b/index 2.html
@@ -1,38 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style.css" />
-<style>
-<title>To do list </title> 
-</style>
-
+	<meta charset="UTF-8">
+	<title>To do list </title> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css.css" />
 </head>
-
 <body>
 
-<body style="background-color:#ADADAD;">
+	<header>	
+		<body class="bodystyle">	
+		<h1>To do list </h1>
+ 	</header>
 
-<!--construction de l'encadré du titre -->
+<main>
+ 	<div class="container">
+		<input class="inpoute" type="text" placeholder="Tâche à effectuer"> 
+		<p><button class="button" onclick="affichage()" >Ajouter</button></p>
+	</div>
 
-<!--Avec width= remplissage en largeur du tableau, border= epaisseur de la premiere bande, cellspacing= largeur entre les 2 bandes et cellpading= la largeur du tout -->
-<table width="100%" border ="10" cellspacing="10" cellpadding="10"><tr><td><div align=center><br>
-<h1 style="text-align:center;" >To do list </h1> </div></td><tr></table>
-  </table>
-
-<!--placement du texte tache à gauche-->
- <p align=left>Tache</p>
-
-<!--zone de texte à ecrire-->
-<input  type="text" id="txt1" placeholder="Tâche à effectuer" autofocus style="width:500px height=352px " ><br>
- 
-<!--bouton ajouter-->
-     <input  class="favorite styled"
-       type="button"
-       value="Ajouter"
-       style="width:100px " />
-
-
-  
+	<ul>
+		<p id="tache 1" class=center></p>
+		<p id="tache 2" class=center></p>
+		<p id="tache 3" class=center></p>
+	</ul>
+</main>
+<script src="js.js"></script>
 
 </body>
 </html>
